--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -53,7 +53,21 @@ jobs:
         working-directory: ${{ env.app_name }}
         run: |
           docker image build -t ${{ env.artifact_registry_path }}/${{ env.app_name }}:${{ env.app_version }}   .
+
+    - id: 'auth'
+      name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v0.6.0'
+      with:
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+        token_format: 'access_token'
+
+    # - uses: 'docker/login-action@v1'
+    #   name: 'Docker login'
+    #   with:
+    #     registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+    #     username: 'oauth2accesstoken'
+    #     password: '${{ steps.auth.outputs.access_token }}'
          
-    
+      
 
 
