--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -61,12 +61,12 @@ jobs:
         credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
         token_format: 'access_token'
 
-    # - uses: 'docker/login-action@v1'
-    #   name: 'Docker login'
-    #   with:
-    #     registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
-    #     username: 'oauth2accesstoken'
-    #     password: '${{ steps.auth.outputs.access_token }}'
+    - uses: 'docker/login-action@v1'
+      name: 'Docker login'
+      with:
+        registry: 'us-central1-docker.pkg.dev/terraform-project-helmapp/artemis'
+        username: 'oauth2accesstoken'
+        password: '${{ steps.auth.outputs.access_token }}'
          
       
 
