--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -54,19 +54,19 @@ jobs:
         run: |
           docker image build -t ${{ env.artifact_registry_path }}/${{ env.app_name }}:${{ env.app_version }}   .
 
-    - id: 'auth'
-      name: 'Authenticate to Google Cloud'
-      uses: 'google-github-actions/auth@v0.6.0'
-      with:
-        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-        token_format: 'access_token'
+    # - id: 'auth'
+    #   name: 'Authenticate to Google Cloud'
+    #   uses: 'google-github-actions/auth@v0.6.0'
+    #   with:
+    #     credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+    #     token_format: 'access_token'
 
-    - uses: 'docker/login-action@v1'
-      name: 'Docker login'
-      with:
-        registry: 'us-central1-docker.pkg.dev/terraform-project-helmapp/artemis'
-        username: 'oauth2accesstoken'
-        password: '${{ steps.auth.outputs.access_token }}'
+    # - uses: 'docker/login-action@v1'
+    #   name: 'Docker login'
+    #   with:
+    #     registry: 'us-central1-docker.pkg.dev/terraform-project-helmapp/artemis'
+    #     username: 'oauth2accesstoken'
+    #     password: '${{ steps.auth.outputs.access_token }}'
          
       
 
