--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -64,12 +64,12 @@ jobs:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
           token_format: 'access_token'
 
-    # - uses: 'docker/login-action@v1'
-    #   name: 'Docker login'
-    #   with:
-    #     registry: 'us-central1-docker.pkg.dev/terraform-project-helmapp/artemis'
-    #     username: 'oauth2accesstoken'
-    #     password: '${{ steps.auth.outputs.access_token }}'
+      - uses: 'docker/login-action@v1'
+        name: 'Docker login'
+        with:
+          registry: 'us-central1-docker.pkg.dev/terraform-project-helmapp/artemis'
+          username: 'oauth2accesstoken'
+          password: '${{ steps.auth.outputs.access_token }}'
          
             
       # - uses: google-github-actions/setup-gcloud@master
