--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -67,10 +67,14 @@ jobs:
       - uses: 'docker/login-action@v1'
         name: 'Docker login'
         with:
-          registry: 'us-central1-docker.pkg.dev/terraform-project-helmapp/artemis'
+          registry: '${{ env.artifact_registry_path }}'
           username: 'oauth2accesstoken'
           password: '${{ steps.auth.outputs.access_token }}'
          
+            # Runs a set of commands using the runners shell
+      - name: Push Image 
+        run: |
+          docker push ${{ env.artifact_registry_path }}/${{ env.app_name }}:${{ env.app_version }}
             
       # - uses: google-github-actions/setup-gcloud@master
       #   with:
